Form contrast. Fixes #20

--- a/custom/forms.less
+++ b/custom/forms.less
@@ -149,8 +149,9 @@ Styleguide 7.7.
 */
 
 .form-control {
-	border: 2px solid @gray-darker;
-	box-shadow: 0px 0px 0px 2px transparent;
+  color: @black;
+  border: 2px solid @gray-darker;
+  box-shadow: 0px 0px 0px 2px transparent;
 }
 
 /*
